[gd_scene load_steps=6 format=3 uid="uid://c6gkxwvgwbp0j"]

[ext_resource type="Script" path="res://scripts/enemy/enemy.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(30, 30)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_enemy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.1, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4 # Assumindo que o player est√° na camada 3 (2^2 = 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_2")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
